# bevy_settings_assets

./: Cargo.toml
examples/: hello_world.rs
src/: lib.rs
