[package]
name = "bevy_settings_assets"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", default-features = false }
serde = "1.0"
ron = "0.6"
anyhow = "1.0"
